# crawl_reddit

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
crawler/: base.py  coordinator.py
crawler/reddit/: api.py
discovery/: engine.py
pipeline/: dedup.py  models.py  normalize.py
tests/: conftest.py  test_cli.py  test_config.py  test_coordinator.py  test_crawler_base.py  test_crawler_reddit.py  test_discovery.py  test_pipeline_dedup.py  test_pipeline_models.py  test_pipeline_normalize.py  test_writer_batch.py  test_writer_db.py
writer/: batch.py  db.py
